--- a/styles/globals.css
+++ b/styles/globals.css
@@ -2,10 +2,11 @@ html,
 body {
   padding: 0;
   margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, Segoe UI, Roboto, Oxygen, Ubuntu, Cantarell, Fira Sans, Droid Sans,
-    Helvetica Neue, sans-serif;
-  line-height: 1.6;
-  font-size: 18px;
+  font-family: 'Roobert';
+  font-style: normal;
+  font-weight: 400;
+  font-size: 16px;
+  background-color: #F3F4F6;
 }
 
 * {
@@ -25,3 +26,4 @@ img {
   max-width: 100%;
   display: block;
 }
+
